--- a/src/app/common/utility/navbar.html
+++ b/src/app/common/utility/navbar.html
@@ -1,6 +1,6 @@
 <div>
     <ul class="navigation">
-        <li><a href="../../index.html">Home</a></li>
-        <li><a href="../../component/createProject/createProject.html">Create Project</a></li>
+        <li><a ui-sref="app">Home</a></li>
+        <li><a ui-sref="createProject">Create Project</a></li>
     </ul>
 <div>
