--- a/src/app/component/createProject/createProject.html
+++ b/src/app/component/createProject/createProject.html
@@ -1,26 +1,1 @@
-<!doctype html>
-<html lang="en-us" ng-app="root">
-
-    <head>
-        <title>Create Project</title>
-        <!-- Angular Material CSS now available via Google CDN; version 1.1.23 used here -->
-        <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.23/angular-material.min.css"/>
-        <link id="bundlecss" rel="stylesheet" href="css/main-1601522559844.min.css">
-    </head>
-
-    <body>
-        <navbar></navbar>
-        <h1 class="projectForm">Create New Project</h1>
-        <create></create>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular-animate.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular-aria.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.6/angular-messages.min.js"></script>
-        <!-- Angular Material Javascript now available via Google CDN; version 1.1.23 used here -->
-        <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.23/angular-material.min.js"></script>
-        <script id="bundle2" src="js/vendor-1601522559540.min.js"></script>
-        <script id="bundle" src="js/main-1601522559741.min.js"></script>
-        
-    </body>
-</html>
+<create-project-form></create-project-form>
