Fix projects grid

--- a/src/app/component/browseProjects/projectGrid.html
+++ b/src/app/component/browseProjects/projectGrid.html
@@ -1,4 +1,3 @@
-    <h1 ng-if="$ctrl.projects.length">{{$ctrl.projects}}</h1>
-    <project ng-repeat="project in $ctrl.projects" project="project"></project>
 <main>
+    <project ng-repeat="project in $ctrl.projects" ng-if="$ctrl.projects && $ctrl.projects != {undefined}" project="project">{{project}}</project>
 </main>
