--- a/src/app/component/auth/auth-form/auth-form.html
+++ b/src/app/component/auth/auth-form/auth-form.html
@@ -1,6 +1,7 @@
-<form>
+<form ng-submit="$ctrl.submitForm();">
     <input ng-if="$ctrl.isRegister" required type="text" name="firstName" ng-model="$ctrl.user.firstName"/>
+    <input ng-if="$ctrl.isRegister" required type="text" name="lastName" ng-model="$ctrl.user.lastName"/>
     <input required type="email" name="email" ng-model="$ctrl.user.email"/>
-    <input required type="email" name="email" ng-model="$ctrl.user.email"/>
-    <input required type="email" name="email" ng-model="$ctrl.user.email"/>
+    <input required type="password" name="password" ng-model="$ctrl.user.password"/>
+    <input type="submit" value="{{$ctrl.button}}">
 </form>
