--- a/src/app/component/auth/auth-login/auth-login.html
+++ b/src/app/component/auth/auth-login/auth-login.html
@@ -1,6 +1,6 @@
 <div>
     <div>
-        <auth-form user="" on-submit=""></auth-form>
+        <auth-form user="$ctrl.user" button="Log In" on-submit="$ctrl.loginUser($event);"></auth-form>
     </div>
     <div>
         <a ui-sref="auth.register">Don't have an account? Create one here.</a>
